Work on 08-13. Consolidated pqueue tests, fixed docs and deprecation warnings in several tests.